# KineProject

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.9eade3e  ajoutpatient.cpp  ajoutpatient.h  ajoutpatient.ui  basePatient.db  config.ini  gestionpatients.h  gestionpatients.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  rapportHtml.txt
DEPLOIEMENT/: config.ini
DEPLOIEMENT/PDFTK/: test.html
DEPLOIEMENT/src/: rapport.html
DEPLOIEMENT/zivid-test/: basePatient.db
DEPLOIEMENT/zivid-test/PDFTK/: testMerge.bat
KineProject_autogen/: deps  mocs_compilation.cpp
KineProject_autogen/EWIEGA46WW/: moc_ajoutpatient.cpp  moc_ajoutpatient.cpp.d  moc_gestionpatients.cpp  moc_gestionpatients.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
KineProject_autogen/include/: ui_ajoutpatient.h  ui_gestionpatients.h  ui_mainwindow.h
backup/: ajoutpatient.cpp  ajoutpatient.ui  gestionpatients.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: config.ini  rapport.html
